msdk: segfault on Intel GPU < gen12 and using OneVPL dispatcher
Since !4177 (merged)
When gstreamer msdk is linked to OneVPL dispatcher library (libvpl.so), no elements are registered/available on Intel platforms with GPU < gen12. The OneVPL dispatcher
uses the legacy MSDK runtime
(libmfxhw64.so) for Intel GPU < gen12.
The issue is not observed
for Intel GPU >= gen12, which the OneVPL dispatcher
uses the OneVPL runtime
(libmfx-gen.so).
Also, this issue is not observed
if using the legacy MSDK dispatcher
(libmfx.so) and MSDK runtime
.
$ gst-inspect-1.0 msdk
(gst-plugin-scanner:418576): GStreamer-CRITICAL **: 15:38:20.502: gst_mini_object_ref: assertion 'mini_object != NULL' failed
(gst-plugin-scanner:418576): GStreamer-CRITICAL **: 15:38:20.502: gst_mini_object_ref: assertion 'mini_object != NULL' failed
ERROR: Caught a segmentation fault while loading plugin file:
/home/uaeoff/Work/workspace/media/install/lib/gstreamer-1.0/libgstmsdk.so
Please either:
- remove it and restart.
- run with --gst-disable-segtrap --gst-disable-registry-fork and debug.
(gst-plugin-scanner:418600): GStreamer-CRITICAL **: 15:38:20.566: gst_mini_object_ref: assertion 'mini_object != NULL' failed
(gst-plugin-scanner:418600): GStreamer-CRITICAL **: 15:38:20.567: gst_mini_object_ref: assertion 'mini_object != NULL' failed
ERROR: Caught a segmentation fault while loading plugin file:
/home/uaeoff/Work/workspace/media/install/lib/gstreamer-1.0/libgstmsdk.so
Please either:
- remove it and restart.
- run with --gst-disable-segtrap --gst-disable-registry-fork and debug.
0:00:00.694697913 418575 0xffac60 ERROR GST_PLUGIN_LOADING gstpluginloader.c:279:plugin_loader_replay_pending: Plugin file /home/uaeoff/Work/workspace/media/install/lib/gstreamer-1.0/libgstmsdk.so failed to load. Blacklisting
No such element or plugin 'msdk'
I will gather a gdb backtrace and attach momentarily...